<resources>
    <string name="app_name">Bootcamp</string>
    <string name="google_login">Google Login</string>
    <string name="location">Location</string>
    <string name="google_map_api" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDw4hEJwx7Eg2ZSYpv6ju6f7z4CinQo1n4
    </string>
    <string name="normal_map">Normal Map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="traffic_map">Show/Hide Taffic</string>
    <string name="pin_info">Pin Info</string>
    <string name="notification">Send Notification</string>
    <string name="cancel">Cancel</string>
    <string name="style">Style</string>
    <string name="heading">Styles and Themes</string>
    <string name="content">Styles and themes on Android allow you to separate the details of your app design from the UI structure and behavior, similar to stylesheets in web design.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>